--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <legend>Quero um Google Glass</legend>
                     <p>
                         <input type="checkbox" name="tPad" id="cPed" checked>
-                        <label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label></p>
+                        <label for="cPed">Gostaria de adquirir um Google Glass quando disponível!</label></p>
                     <p>
                         <label for="cCor">Cor:</label>
                         <input type="color" name="tCor" id="cCor" value="#0000ff">
