--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <input type="submit" name="tEnviar" id="cEnviar" value="Enviar">
         </form>
         <footer>
-            <p>Formulário criado por <a href="https://github.com/devmayara" target="_blank">Mayara G. Silva</a> aluna do <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">CursoemVideo</a>.</p>
+            <p>&copy; Site criado por <a href="https://github.com/devmayara" target="_blank">Mayara Silva,</a> Aluna do <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">CursoemVideo</a>.</p>
         </footer>
     </div>
 </body>
